fix: overflow broken

--- a/_sass/theme/_navbar.sass
+++ b/_sass/theme/_navbar.sass
@@ -14,10 +14,10 @@
 
 @media screen and (min-width: $navbar-breakpoint)
   .navbar
-    .navbar-menu
-      flex-shrink: 1 // added to handle menu bars with many items 
-    .navbar-start
-      overflow: auto // added to handle menu bars with many items 
+    // .navbar-menu
+    //   flex-shrink: 1 // added to handle menu bars with many items 
+    // .navbar-start
+    //   overflow: auto // added to handle menu bars with many items 
     &--floating
       position: absolute
       width: 100%
